--- a/styles/style_inf.css
+++ b/styles/style_inf.css
@@ -25,11 +25,19 @@
     transform: translate(-50%,-50%);
     background: #fff;
     border-radius: 20px;
-    width: 500px;
+    width: 350px;
+}
+
+.info__text{
+    max-height: 270px;
+    overflow: auto;
 }
 
 .info__photo {
-    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 300px;
 }
 
 @media(max-width: 960px){
@@ -44,6 +52,12 @@
         transform: translate(-50%,-50%);
         background: #fff;
         border-radius: 20px;
-        width: 350px;
+        width: 300px;
+        height: 400px;
+    }
+
+    .info__text{
+        max-height: 130px;
+        overflow: auto;
     }
 }
