--- a/styles/style_uk.css
+++ b/styles/style_uk.css
@@ -24,8 +24,13 @@ img{
     stroke: rgb(255, 255, 255);
     stroke-width: 1px;
 }
-
+.first-box_uk {
+    padding: 60px 0px;
+}
 svg .region_uk:hover path {
     fill:#ff0202;
     fill-opacity:0.7;
+}
+hr {
+    margin-block-end: 0px;
 }
